--- a/main.html
+++ b/main.html
@@ -9,37 +9,68 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand text-dark-emphasis" href="#">Navbar</a>
+    <img class="navbar-brand" src="https://course.acciojob.com/acciojob_logo.svg" alt="acciojob">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item dropdown">
-          <a class="nav-link active text-dark-emphasis" aria-current="page" href="#">Home</a>
-			<ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+       <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Bootcamp
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Popular Bootcamps</a></li>
+            <li><a class="dropdown-item" href="#">Bootcamp Developers</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="#">Bootcamp Financing</a></li>
+			  <li><a class="dropdown-item" href="#">Bootcamp Grads</a></li>
+			  <li><a class="dropdown-item" href="#">Alumni</a></li>
           </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
+           Coding
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Coding tools</a></li>
+            <li><a class="dropdown-item" href="#">HTML</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="#">CSS</a></li>
+			  <li><a class="dropdown-item" href="#">JS</a></li>
+			  <li><a class="dropdown-item" href="#">PYTHON</a></li>
+			  <li><hr class="dropdown-divider"></li>
+			  <li><a class="dropdown-item" href="#">Ruby</a></li>
+			  <li><a class="dropdown-item" href="#">C++</a></li>
+			  <li><a class="dropdown-item" href="#">Java</a></li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Career Resources
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Career Advice</a></li>
+            <li><a class="dropdown-item" href="#">Interviews</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Tech Cities</a></li>
+			  <li><a class="dropdown-item" href="#">Tech Salaries</a></li>
+          </ul>
+        </li>
+		  <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Tech Fields
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Web Design</a></li>
+            <li><a class="dropdown-item" href="#">Web Development</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Software Engineering</a></li>
+			  <li><a class="dropdown-item" href="#">Data Science</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+          <a class="nav-link disabled" aria-disabled="true">News & Commentary</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
