--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
           <a class="nav-link dropdown-toggle dropdown-item" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Bootcamp
           </a>
-          <ul class="dropdown-menu">
+          <ul class="dropdown-toggle">
             <li><a class="dropdown-item" href="#">Popular Bootcamps</a></li>
             <li><a class="dropdown-item" href="#">Bootcamp Developers</a></li>
             <li><hr class="dropdown-divider"></li>
