--- a/main.html
+++ b/main.html
@@ -16,59 +16,65 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle dropdown-item" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Bootcamp
-          </a>
-          <ul class="dropdown-toggle">
-            <li><a class="dropdown-item" href="#">Popular Bootcamps</a></li>
-            <li><a class="dropdown-item" href="#">Bootcamp Developers</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Bootcamp Financing</a></li>
-			  <li><a class="dropdown-item" href="#">Bootcamp Grads</a></li>
-			  <li><a class="dropdown-item" href="#">Alumni</a></li>
-          </ul>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle dropdown-item" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-           Coding
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Coding tools</a></li>
-            <li><a class="dropdown-item" href="#">HTML</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">CSS</a></li>
-			  <li><a class="dropdown-item" href="#">JS</a></li>
-			  <li><a class="dropdown-item" href="#">PYTHON</a></li>
-			  <li><hr class="dropdown-divider"></li>
-			  <li><a class="dropdown-item" href="#">Ruby</a></li>
-			  <li><a class="dropdown-item" href="#">C++</a></li>
-			  <li><a class="dropdown-item" href="#">Java</a></li>
-          </ul>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle dropdown-item" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Career Resources
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Career Advice</a></li>
-            <li><a class="dropdown-item" href="#">Interviews</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Tech Cities</a></li>
-			  <li><a class="dropdown-item" href="#">Tech Salaries</a></li>
-          </ul>
-        </li>
-		  <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle dropdown-item" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Tech Fields
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Web Design</a></li>
-            <li><a class="dropdown-item" href="#">Web Development</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Software Engineering</a></li>
-			  <li><a class="dropdown-item" href="#">Data Science</a></li>
-          </ul>
-        </li>
+					<a class="nav-link dropdown-toggle smallcaps" href="#" id="navbarDropdown" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Bootcamps
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<a class="dropdown-item" href="#">Popular Bootcamps</a>
+						<a class="dropdown-item" href="#">Bootcamp Developers</a>
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item" href="#">Bootcamp Financing</a>
+						<a class="dropdown-item" href="#">Bootcamp Grads and Alumni</a>
+
+					</div>
+				</li>
+       <li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle smallcaps" href="#" id="navbarDropdown" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Coding
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<a class="dropdown-item" href="#">HTML</a>
+						<a class="dropdown-item" href="#">CSS</a>
+						<a class="dropdown-item" href="#">CSS</a>
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item" href="#">JS</a>
+						<a class="dropdown-item" href="#">PYTHON</a>
+						<a class="dropdown-item" href="#">Ruby</a>
+						<a class="dropdown-item" href="#">C++</a>
+						<a class="dropdown-item" href="#">Java</a>
+
+					</div>
+				</li>
+       <li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle smallcaps" href="#" id="navbarDropdown" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Career Resources
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<a class="dropdown-item" href="#">Career Advice</a>
+						<a class="dropdown-item" href="#">Advice, Interviews</a>
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item" href="#">Tech Cities</a>
+						<a class="dropdown-item" href="#">Tech Salaries</a>
+
+					</div>
+				</li>
+		 <li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle smallcaps" href="#" id="navbarDropdown" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Tech Fields
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<a class="dropdown-item" href="#">Web Design</a>
+						<a class="dropdown-item" href="#">Web Development</a>
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item" href="#">Software Engineering</a>
+						<a class="dropdown-item" href="#">Data Science</a>
+
+					</div>
+				</li>
         <li class="nav-item">
           <a class="nav-link " aria-disabled="true">News & Commentary</a>
         </li>
